Fix scrollbars

--- a/public/css/styles.sass
+++ b/public/css/styles.sass
@@ -5,6 +5,7 @@ $card-height: 13.5rem
     font-family: Quicksand, sans-serif
     margin: 0
     padding: 0
+    // overflow: hidden
 
 .hidden
     display: none !important
@@ -46,7 +47,7 @@ nav
     gap: 0.25rem
     // padding: 0.75rem
 
-    overflow: scroll
+    // overflow: scroll
 
     min-width: 8rem
 
@@ -72,7 +73,7 @@ nav
     display: flex
     border: 1px solid #ddd
 
-    overflow: scroll
+    // overflow: scroll
 
     max-height: 80vh
 
@@ -82,7 +83,8 @@ main
 
     padding: 0.5rem
 
-    overflow: scroll
+    // overflow: scroll
+    overflow-y: auto
 
     border-left: 1px solid #ddd
 
@@ -102,7 +104,7 @@ main
     & > div
         padding-inline: 0.5rem
         height: 0
-        overflow: scroll
+        overflow-y: auto
 
         transition: all 0.3s cubic-bezier(.75,0,.25,1)
 
